src/test/deca/context/invalid/Objet/SameDeclaration-Method-After-Field.deca
// Description:
//      Using same ident as field for method
//
// Results:
//      Line 12 : Rule (2.6) Identifier already used
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    void x() {
    }
}
